# apps/api/src/finance/dto/PaginatedTickerOption.dto.ts
@@ -1,0 +1,4 @@
+import { PaginatedResponseDto } from '../../shared/PaginatedResponse.dto';
+import { TickerOptionDto } from './TickerOption.dto';
+
+export class PaginatedTickerOptionDto extends PaginatedResponseDto(TickerOptionDto) {}
