# apps/api/src/finance/dto/TickerOption.dto.ts
@@ -2,12 +2,16 @@ import { ApiProperty } from '@nestjs/swagger';
 
 export class TickerOptionDto {
   @ApiProperty()
+  isin: string;
+
+  @ApiProperty()
   ticker: string;
 
   @ApiProperty()
   companyName: string;
 
-  constructor(ticker: string, companyName: string) {
+  constructor(isin: string, ticker: string, companyName: string) {
+    this.isin = isin;
     this.ticker = ticker;
     this.companyName = companyName;
   }
