# packages/api-client/openapi.yaml
@@ -206,6 +206,41 @@ paths:
         - cookie: []
       tags:
         - Finance
+  /finance/screener/filters/tickers:
+    get:
+      operationId: getScreenerTickerOptions
+      parameters:
+        - name: page
+          required: false
+          in: query
+          schema:
+            minimum: 1
+            default: 1
+            type: number
+        - name: limit
+          required: false
+          in: query
+          schema:
+            minimum: 1
+            default: 20
+            type: number
+        - name: search
+          required: false
+          in: query
+          description: Fuzzy search on ticker or company name
+          schema:
+            type: string
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaginatedTickerOptionDto'
+      security:
+        - cookie: []
+      tags:
+        - Finance
   /finance/sync/status:
     get:
       operationId: getSyncStatus
@@ -656,6 +691,8 @@ components:
     TickerDto:
       type: object
       properties:
+        isin:
+          type: string
         ticker:
           type: string
         companyName:
@@ -957,6 +994,7 @@ components:
           nullable: true
           description: 10 day average volume
       required:
+        - isin
         - ticker
         - companyName
         - sector
@@ -1053,23 +1091,9 @@ components:
       required:
         - data
         - meta
-    TickerOptionDto:
-      type: object
-      properties:
-        ticker:
-          type: string
-        companyName:
-          type: string
-      required:
-        - ticker
-        - companyName
     ScreenerFilterOptionsDto:
       type: object
       properties:
-        tickers:
-          type: array
-          items:
-            $ref: '#/components/schemas/TickerOptionDto'
         sectors:
           type: array
           items:
@@ -1095,13 +1119,37 @@ components:
           items:
             type: string
       required:
-        - tickers
         - sectors
         - industries
         - countries
         - markets
         - currencies
         - analystRatings
+    TickerOptionDto:
+      type: object
+      properties:
+        isin:
+          type: string
+        ticker:
+          type: string
+        companyName:
+          type: string
+      required:
+        - isin
+        - ticker
+        - companyName
+    PaginatedTickerOptionDto:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/TickerOptionDto'
+        meta:
+          $ref: '#/components/schemas/PaginationMetaDto'
+      required:
+        - data
+        - meta
     SyncStatusDto:
       type: object
       properties:
